add_executable(say say.c)
target_include_directories(say PRIVATE ../../.. ${HEADER_OUTPUT_DIRECTORY})
target_link_libraries(say PRIVATE dectalk)
add_executable(aclock aclock.c)
target_include_directories(aclock PRIVATE ../../.. ${HEADER_OUTPUT_DIRECTORY})
target_link_libraries(aclock PRIVATE dectalk)
add_executable(dtmemory dtmemory.c)
target_include_directories(dtmemory PRIVATE ../../.. ${HEADER_OUTPUT_DIRECTORY})
target_link_libraries(dtmemory PRIVATE dectalk)
